rhos-liberty-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  creationTimestamp: '2019-06-20T16:04:16Z'
  labels:
    app: liberty
  name: liberty
  namespace: websphere-liberty
  resourceVersion: '284280'
  selfLink: /apis/route.openshift.io/v1/namespaces/websphere-liberty/routes/liberty
  uid: 0e189798-9375-11e9-aaf1-7a33963b9e24
spec:
  host: >-
    liberty-websphere-liberty.pbcluster-e0ec4bd6a2da9be4f669d8bd32ad8616-0001.us-east.containers.appdomain.cloud
  port:
    targetPort: 9443-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: liberty
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2019-06-20T16:04:16Z'
          status: 'True'
          type: Admitted
      host: >-
        liberty-websphere-liberty.pbcluster-e0ec4bd6a2da9be4f669d8bd32ad8616-0001.us-east.containers.appdomain.cloud
      routerName: router
      wildcardPolicy: None
